@@ -5,7 +5,7 @@ use strict;
 use Carp qw(croak);
 use Test::BrewBuild;
 
-our $VERSION = '2.11';
+our $VERSION = '2.14';
 
 # we let BrewBuild manage the argument list so that the other scripts can
 # simply pass in the args directly and use the API instead of wrapping around
