@@ -12,5 +12,6 @@ port = 7800
 
 [dispatch]
 testers = 127.0.0.1, 127.0.0.1:9999
-repo = https://github.com/stevieb9/p5-test-brewbuild
+repo = https://github.com/stevieb9/test-brewbuild
 cmd = brewbuild -N
+auto_sleep = 60
